--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>Welcome my love</h1>
+    <h1 class="hero-heading">Welcome my love❤️</h1>
     
     <div id="home" class="section active">
         <h2>Home Section</h2>
@@ -22,7 +22,7 @@
     
     <div id="pics" class="section">
         <h2>Pics Section</h2>
-        <p>Add your favorite pictures here.</p>
+        <p>Our best pics↓↓↓</p>
         <img src="img/holalala.jpg" class="hover-pic" alt="us">
         <img src="img/pic2.jpg" class="hover-pic" alt="uss">
         <img src="img/pic3.jpg" class="hover-pic" alt="us">
@@ -31,8 +31,6 @@
         <img src="img/pic6.jpg" class="hover-pic" alt="us">
 
         <button onclick="showSection('home')">Back to Home</button>
-    </div>
-
     </div>
 
     <div id="days" class="section">
@@ -55,12 +53,13 @@
         <button onclick="showSection('home')">Back to Home</button>
     </div>
 
+    <h3>BTW This is a work in progress! Not done YET!</h3>
     <div id="music-player"" class="music-player-container">
         <h3 class="now-playing">🎵 Now Playing</h3>
         <div class="music-player-frame">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5rbKRtReZvMuDT35rnEBQM?utm_source=generator&theme=0" 
-            width="50%" 
-            height="150" 
+            width="100%" 
+            height="80" 
             frameBorder="0" 
             allowfullscreen="" 
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
